fix(124): use design chevron-down.svg for select arrow spacing

--- a/apps/website/app/scss/components/_form.scss
+++ b/apps/website/app/scss/components/_form.scss
@@ -329,7 +329,7 @@ input:-webkit-autofill {
     appearance: none;
     height: 45px;
     background-image: url("/images/chevron-down.svg");
-    background-position: center right 30px;
+    background-position: center right 15px;
     background-repeat: no-repeat;
   }
 
